<resources>
    <string name="app_name">Nam-nam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eat a lot, \nEat delicious</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipes">Recipes</string>
    <string name="fragment_recipe">Recipe</string>
    <string name="new_recipe">New recipe</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="minutes">%d min.</string>


    <!--    welcome screen-->

    <string name="welcome1">Welcome to the coolest recipes app!</string>
    <string name="welcome2">3 more steps, and you will forget about caring "What to cook?"</string>
    <string name="welcome3">Let\'s register!</string>
    <string name="skip">Skip ></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>


    <!--    Password dialog-->
    <string name="you_are_registered">You are registered</string>
    <string name="login_password">Login: %s \nPassword: %s</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="password_is_wrong">Wrong password or user name.</string>
    <string name="login">Login</string>
    <string name="enter_login">Enter login and password</string>

    <!--   Action mode recipe list-->

    <string name="delete">Delete</string>
    <plurals name="recipes_selected">
        <item quantity="one">%d recipe selected</item>
        <item quantity="other">%d recipes selected</item>
    </plurals>


</resources>