<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_recipesList">

    <fragment
        android:id="@+id/nav_recipesList"
        android:name="com.kolis.cookingbook.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_recipesList_to_watchRecipeFragment"
            app:destination="@id/nav_watch_recipe"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_recipesList_to_createRecipeFragment"
            app:destination="@id/nav_createRecipe"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/nav_watch_recipe"
        android:name="com.kolis.cookingbook.ui.watchRecipe.WatchRecipeFragment"
        android:label="@string/fragment_recipe"
        tools:layout="@layout/fragment_recipe_watch">
        <action
            android:id="@+id/action_recipeWatch_to_createRecipeFragment"
            app:destination="@id/nav_createRecipe"
            app:popUpToInclusive="false" />
        <argument
            android:name="recipeModel"
            app:argType="com.kolis.cookingbook.ui.recipes.RecipeModel" />
    </fragment>

    <fragment
        android:id="@+id/nav_createRecipe"
        android:name="com.kolis.cookingbook.ui.createRecipe.CreateRecipeFragment"
        android:label="@string/new_recipe"
        tools:layout="@layout/fragment_create_recipe">
        <argument
            android:name="editRecipeModel"
            app:argType="com.kolis.cookingbook.ui.recipes.RecipeModel" />

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.kolis.cookingbook.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.kolis.cookingbook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


</navigation>

